--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -1302,19 +1302,18 @@ Ricevuto un messaggio di scambio chiavi per una versione di protocollo non valid
   <string name="Insights__percent">%</string>
   <string name="Insights__title">Statistiche</string>
   <string name="InsightsDashboardFragment__title">Statistiche</string>
-  <string name="InsightsDashboardFragment__tagline">Il %1$d%% dei tuoi messaggi in uscita negli ultimi 7 giorni sono stati crittografati end-to-end con il Protocollo Signal.</string>
+  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__tagline">Il %1$d%% dei tuoi messaggi in uscita negli ultimi 7 giorni sono stati crittografati end-to-end con il Protocollo Signal.</string> -->
   <string name="InsightsDashboardFragment__boost_your_signal">Aumenta il tuo Signal</string>
-  <string name="InsightsDashboardFragment__100_title">Il tuo Signal è potente</string>
-  <string name="InsightsDashboardFragment__no_signal_yet">Nessun Signal (ancora)</string>
-  <string name="InsightsDashboardFragment__youre_just_getting_started">Hai appena iniziato. Le statistiche saranno visualizzate dopo che hai inviato alcuni messaggi.</string>
+  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__100_title">Il tuo Signal è potente</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__no_signal_yet">Nessun Signal (ancora)</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__youre_just_getting_started">Hai appena iniziato. Le statistiche saranno visualizzate dopo che hai inviato alcuni messaggi.</string> -->
   <string name="InsightsDashboardFragment__start_a_conversation">Inizia una conversazione</string>
-  <string name="InsightsDashboardFragment__100_description">L\'avanzata tecnologia di protezione della privacy di Signal ha automaticamente protetto tutti i tuoi recenti messaggi in uscita.</string>
+  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__100_description">L\'avanzata tecnologia di protezione della privacy di Signal ha automaticamente protetto tutti i tuoi recenti messaggi in uscita.</string> -->
   <string name="InsightsDashboardFragment__invite_your_contacts">Inizia a comunicare in modo sicuro e attiva nuove funzionalità che vanno oltre le limitazioni dei messaggi SMS non criptati invitando più contatti a unirsi a Signal.</string>
   <string name="InsightsDashboardFragment__this_stat_was_generated_locally">Questa statistica è generata localmente sul tuo dispositivo e può essere vista solo da te. Non è mai trasmessa da nessuna parte.</string>
   <string name="InsightsDashboardFragment__encrypted_messages">Messaggi criptati</string>
   <string name="InsightsDashboardFragment__cancel">Annulla</string>
   <string name="InsightsDashboardFragment__send">Invia</string>
-  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__not_using_signal_yet">Non utilizza ancora Signal</string> -->
   <string name="InsightsModalFragment__title">Ti presentiamo le statistiche</string>
   <string name="InsightsModalFragment__description">Scopri quanti dei tuoi messaggi in uscita sono stati inviati in modo sicuro, quindi invita rapidamente nuovi contatti per aumentare la tua percentuale di Signal.</string>
   <string name="InsightsModalFragment__view_insights">Visualizza statistiche</string>
