--- a/res/values-sq/strings.xml
+++ b/res/values-sq/strings.xml
@@ -1299,19 +1299,18 @@
   <string name="Insights__percent">%</string>
   <string name="Insights__title">Prirje</string>
   <string name="InsightsDashboardFragment__title">Prirje</string>
-  <string name="InsightsDashboardFragment__tagline">%1$d%% e mesazheve tuaj ikës në 7 ditët e fundit qen të fshehtëzuara skaj-më-skaj me Protokollin Signal.</string>
+  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__tagline">%1$d%% e mesazheve tuaj ikës në 7 ditët e fundit qen të fshehtëzuara skaj-më-skaj me Protokollin Signal.</string> -->
   <string name="InsightsDashboardFragment__boost_your_signal">Fuqizoni Signal-in tuaj</string>
-  <string name="InsightsDashboardFragment__100_title">Signal-i juaj është i Fortë</string>
-  <string name="InsightsDashboardFragment__no_signal_yet">(Ende) Pa Signal</string>
-  <string name="InsightsDashboardFragment__youre_just_getting_started">Sapo po filloni. Prirjet do të shfaqen pasi të dërgoni ca mesazhe.</string>
+  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__100_title">Signal-i juaj është i Fortë</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__no_signal_yet">(Ende) Pa Signal</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__youre_just_getting_started">Sapo po filloni. Prirjet do të shfaqen pasi të dërgoni ca mesazhe.</string> -->
   <string name="InsightsDashboardFragment__start_a_conversation">Nisni një bisedë</string>
-  <string name="InsightsDashboardFragment__100_description">Teknologjia Signal, që ruan privatësinë, ka mbrojtur automatikisht krejt mesazhet tuaj ikës së fundi.</string>
+  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__100_description">Teknologjia Signal, që ruan privatësinë, ka mbrojtur automatikisht krejt mesazhet tuaj ikës së fundi.</string> -->
   <string name="InsightsDashboardFragment__invite_your_contacts">Filloni të komunikoni në mënyrë të parrezik dhe aktivizoni veçorit të reja që shkojnë tej kufizimeve të mesazheve SMS të pafshehtëzuar, duke ftuar më tepër kontakte të bëhen pjesë e Signal-it.</string>
   <string name="InsightsDashboardFragment__this_stat_was_generated_locally">Kjo statistikë qe prodhuar lokalisht dhe mund të shihet vetëm nga ju. Nuk transmetohet kurrë gjetkë.</string>
   <string name="InsightsDashboardFragment__encrypted_messages">Mesazhe të fshehtëzuar</string>
   <string name="InsightsDashboardFragment__cancel">Anuloje</string>
   <string name="InsightsDashboardFragment__send">Dërgoje</string>
-  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__not_using_signal_yet">Ende s’përdoret Signal-i</string> -->
   <string name="InsightsModalFragment__title">Ju Paraqesim Prirje</string>
   <string name="InsightsModalFragment__description">Shihni se sa nga mesazhet tuaja ikës u dërguan në mënyrë të parrezik, mandej ftoni pa humbur kohë kontakte të rinj, për të fuqizuar përqindjen tuaj Signal.</string>
   <string name="InsightsModalFragment__view_insights">Shihni Prirje</string>
