--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -1272,19 +1272,18 @@
   <string name="Insights__percent">%</string>
   <string name="Insights__title">Insights</string>
   <string name="InsightsDashboardFragment__title">Insights</string>
-  <string name="InsightsDashboardFragment__tagline">在過去7天中，你傳出的%1$d%%封訊息已使用 Signal 協定使用了點對點加密。</string>
+  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__tagline">在過去7天中，你傳出的%1$d%%封訊息已使用 Signal 協定使用了點對點加密。</string> -->
   <string name="InsightsDashboardFragment__boost_your_signal">加速你的 Signal</string>
-  <string name="InsightsDashboardFragment__100_title">你的 Signal  很安全</string>
-  <string name="InsightsDashboardFragment__no_signal_yet">(還)沒有 Signal</string>
-  <string name="InsightsDashboardFragment__youre_just_getting_started">你才剛剛開始使用。 發送一些訊息後，將顯示Insights功能。</string>
+  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__100_title">你的 Signal  很安全</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__no_signal_yet">(還)沒有 Signal</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__youre_just_getting_started">你才剛剛開始使用。 發送一些訊息後，將顯示Insights功能。</string> -->
   <string name="InsightsDashboardFragment__start_a_conversation">開啟一個對話</string>
-  <string name="InsightsDashboardFragment__100_description">Signal的進階隱私保護技術可自動保護你最近發出的所有訊息。</string>
+  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__100_description">Signal的進階隱私保護技術可自動保護你最近發出的所有訊息。</string> -->
   <string name="InsightsDashboardFragment__invite_your_contacts">透過邀請更多聯絡人加入Signal，開始安全地通訊並啟用超越未加密 SMS 訊息限制的新功能。</string>
   <string name="InsightsDashboardFragment__this_stat_was_generated_locally">此統計資訊是在你的裝置上產生的，只有你自己可以看到。 它不會傳輸到任何地方。</string>
   <string name="InsightsDashboardFragment__encrypted_messages">已加密的訊息</string>
   <string name="InsightsDashboardFragment__cancel">取消</string>
   <string name="InsightsDashboardFragment__send">傳送</string>
-  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__not_using_signal_yet">尚未使用 Signal</string> -->
   <string name="InsightsModalFragment__title">介紹 Insights</string>
   <string name="InsightsModalFragment__description">找出安全傳送的訊息數量，然後迅速邀請新聯絡人提高 Signal 比例。</string>
   <string name="InsightsModalFragment__view_insights">檢視 Insights</string>
