--- a/res/values-cy/strings.xml
+++ b/res/values-cy/strings.xml
@@ -1361,19 +1361,18 @@ Send neges heb ei ddiogelu?</string>
   <string name="Insights__percent">%</string>
   <string name="Insights__title">Mewnwelediadau</string>
   <string name="InsightsDashboardFragment__title">Mewnwelediadau</string>
-  <string name="InsightsDashboardFragment__tagline">Roedd %1$d%% o\'ch negeseuon allan yn ystod y 7 diwrnod diwethaf wedi eu hamgryptio o un pen i\'r llall gyda Signal Protocol</string>
+  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__tagline">Roedd %1$d%% o\'ch negeseuon allan yn ystod y 7 diwrnod diwethaf wedi eu hamgryptio o un pen i\'r llall gyda Signal Protocol</string> -->
   <string name="InsightsDashboardFragment__boost_your_signal">Cynyddu eich Signal</string>
-  <string name="InsightsDashboardFragment__100_title">Mae eich Signal yn Gryf</string>
-  <string name="InsightsDashboardFragment__no_signal_yet">Dim Signal (eto)</string>
-  <string name="InsightsDashboardFragment__youre_just_getting_started">Rydych wrthi\'n cychwyn. Bydd mewnwelediadau\'n cael eu dangos ar ôl i chi anfon nifer o negeseuon.</string>
+  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__100_title">Mae eich Signal yn Gryf</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__no_signal_yet">Dim Signal (eto)</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__youre_just_getting_started">Rydych wrthi\'n cychwyn. Bydd mewnwelediadau\'n cael eu dangos ar ôl i chi anfon nifer o negeseuon.</string> -->
   <string name="InsightsDashboardFragment__start_a_conversation">Cychwyn sgwrs</string>
-  <string name="InsightsDashboardFragment__100_description">Mae technoleg diogelu preifatrwydd uwch Signal wedi diogelu\'r cyfan o\'ch negeseuon allan.</string>
+  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__100_description">Mae technoleg diogelu preifatrwydd uwch Signal wedi diogelu\'r cyfan o\'ch negeseuon allan.</string> -->
   <string name="InsightsDashboardFragment__invite_your_contacts">Cychwynnwch gyfathrebu\'n ddiogel a galluogi nodweddion newydd sy\'n mynd tu hwnt i gyfyngiadau negeseuon SMS heb eu hamgryptio drwy wahodd eich cysylltiadau i ymuno â Signal.</string>
   <string name="InsightsDashboardFragment__this_stat_was_generated_locally">Cafodd yr ystadegyn hwn ei gynhyrchu\'n lleol ar eich dyfais a dim ond chi gall ei weld. Nid yw\'n cael ei drosglwyddo i unlle.</string>
   <string name="InsightsDashboardFragment__encrypted_messages">Negeseuon wedi\'u hamgryptio</string>
   <string name="InsightsDashboardFragment__cancel">Diddymu</string>
   <string name="InsightsDashboardFragment__send">Anfon</string>
-  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__not_using_signal_yet">Ddim yn defnyddio Signal eto</string> -->
   <string name="InsightsModalFragment__title">Yn cyflwyno Mewnweledigaethau</string>
   <string name="InsightsModalFragment__description">Canfod faint o\'ch negeseuon allan gafodd eu anfon yn ddiogel, yna gwahodd cysylltiadau newydd i gynyddu eich canran Signal.</string>
   <string name="InsightsModalFragment__view_insights">Gweld Mewnweledigaethau</string>
