--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -1307,24 +1307,23 @@ Signal heeft ook toegang nodig tot de media op je apparaat, om bestanden bij te 
   <string name="Insights__percent">%</string>
   <string name="Insights__title">Inzichten</string>
   <string name="InsightsDashboardFragment__title">Inzichten</string>
-  <string name="InsightsDashboardFragment__tagline">%1$d%% van je uitgaande berichten van de afgelopen 7 dagen waren eind-tot-eind-versleuteld met het Signal Protocol.</string>
+  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__tagline">%1$d%% van je verzonden berichten van de afgelopen 7 dagen waren eind-tot-eind-versleuteld met het Signal Protocol.</string> -->
   <string name="InsightsDashboardFragment__boost_your_signal">Je kunt meer gesprekken beveiligd voeren</string>
-  <string name="InsightsDashboardFragment__100_title">Je gebruikt Signal optimaal</string>
-  <string name="InsightsDashboardFragment__no_signal_yet">Je maakt nog geen gebruik van beveiligde Signal-gesprekken</string>
-  <string name="InsightsDashboardFragment__youre_just_getting_started">Je bent pas net begonnen. Inzichten zullen worden weergeven nadat je een aantal berichten hebt verzonden.</string>
+  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__100_title">Je gebruikt Signal optimaal</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__no_signal_yet">Je maakt nog geen gebruik van beveiligde Signal-gesprekken</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__youre_just_getting_started">Je bent pas net begonnen. Inzichten zullen worden weergeven nadat je een aantal berichten hebt verzonden.</string> -->
   <string name="InsightsDashboardFragment__start_a_conversation">Begin een gesprek</string>
-  <string name="InsightsDashboardFragment__100_description">Signal beschermde automatisch al je recent uitgaande berichten.</string>
+  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__100_description">Signal beschermde automatisch al je recent verzonden berichten.</string> -->
   <string name="InsightsDashboardFragment__invite_your_contacts">Communiceer voortaan beveiligd en maak nieuwe functies mogelijk welke verder gaan dan de limitaties van onversleutelde sms-berichten, door meer contactpersonen uit te nodigen om Signal te gebruiken.</string>
   <string name="InsightsDashboardFragment__this_stat_was_generated_locally">Deze statistiek is lokaal gegenereerd op jouw apparaat en kan alleen door jou gezien worden. Het wordt nooit verzonden.</string>
   <string name="InsightsDashboardFragment__encrypted_messages">Versleutelde berichten</string>
   <string name="InsightsDashboardFragment__cancel">Annuleren</string>
   <string name="InsightsDashboardFragment__send">Verzend</string>
-  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__not_using_signal_yet">Gebuikt Signal nog niet</string> -->
   <string name="InsightsModalFragment__title">We introduceren ‘inzichten’</string>
   <string name="InsightsModalFragment__description">Ontdek hoeveel van je uitgaande berichten beveiligd zijn verzonden en nodig gemakkelijk nieuwe contactpersonen uit om je percentage beveiligde berichten te verhogen.</string>
   <string name="InsightsModalFragment__view_insights">Inzichten weergeven</string>
   <string name="FirstInviteReminder__title">Uitnodigen voor Signal</string>
-  <string name="FirstInviteReminder__description">Je kunt het aantal versleutelde berichten welke je verstuurt verhogen met %1$d%%</string>
+  <string name="FirstInviteReminder__description">Je kunt het aantal versleutelde berichten welke je verzendt verhogen met %1$d%%</string>
   <string name="SecondInviteReminder__title">Beveilig meer gesprekken</string>
   <string name="SecondInviteReminder__description">Nodig %1$s uit</string>
   <string name="InsightsReminder__view_insights">Inzichten weergeven</string>
