--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -1358,19 +1358,18 @@
   <string name="Insights__percent">%</string>
   <string name="Insights__title">Выводы</string>
   <string name="InsightsDashboardFragment__title">Выводы</string>
-  <string name="InsightsDashboardFragment__tagline">%1$d%% от ваших исходящих сообщений за последние 7 дней были защищены сквозным шифрованием с использованием Signal Protocol.</string>
+  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__tagline">%1$d%% от ваших исходящих сообщений за последние 7 дней были защищены сквозным шифрованием с использованием Signal Protocol.</string> -->
   <string name="InsightsDashboardFragment__boost_your_signal">Улучшите свой Signal</string>
-  <string name="InsightsDashboardFragment__100_title">Ваш Signal сильный</string>
-  <string name="InsightsDashboardFragment__no_signal_yet">Нет Signal (пока)</string>
-  <string name="InsightsDashboardFragment__youre_just_getting_started">Вы только начинаете. Выводы будут показаны, когда вы отправите несколько сообщений.</string>
+  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__100_title">Ваш Signal сильный</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__no_signal_yet">Нет Signal (пока)</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__youre_just_getting_started">Вы только начинаете. Выводы будут показаны, когда вы отправите несколько сообщений.</string> -->
   <string name="InsightsDashboardFragment__start_a_conversation">Начните разговор</string>
-  <string name="InsightsDashboardFragment__100_description">Передовая технология сохранения конфиденциальности Signal автоматически защитила все из ваших недавних исходящих сообщений.</string>
+  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__100_description">Передовая технология сохранения конфиденциальности Signal автоматически защитила все из ваших недавних исходящих сообщений.</string> -->
   <string name="InsightsDashboardFragment__invite_your_contacts">Начните общаться безопасно и включите новые функции, которые выходят за пределы ограничений незащищённых SMS, приглашая больше контактов присоединиться к Signal.</string>
   <string name="InsightsDashboardFragment__this_stat_was_generated_locally">Эта статистика была сгенерирована локально на вашем устройстве и видна только вам. Она никогда никуда не передаётся.</string>
-  <string name="InsightsDashboardFragment__encrypted_messages">Зашифрованные сообщения</string>
+  <string name="InsightsDashboardFragment__encrypted_messages">Зашифрованных сообщений</string>
   <string name="InsightsDashboardFragment__cancel">Отменить</string>
   <string name="InsightsDashboardFragment__send">Отправить</string>
-  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__not_using_signal_yet">Ещё не использует Signal</string> -->
   <string name="InsightsModalFragment__title">Представляем «Выводы»</string>
   <string name="InsightsModalFragment__description">Узнайте, сколько из ваших исходящих сообщений было отправлено безопасно, а затем быстро пригласите новые контакты, чтобы увеличить ваш процент Signal.</string>
   <string name="InsightsModalFragment__view_insights">Просмотреть выводы</string>
